kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: operators-backend
    labels:
        app: operators-backend
    namespace: blog
spec:
    replicas: 1
    selector:
        matchLabels:
            app: operators-backend
    template:
        metadata:
            labels:
                app: operators-backend
        spec:
            containers:
                - name: operators-backend-service
                  image: operators_server:latest
                  imagePullPolicy: Never
                  ports:
                     - containerPort: 7000
                - name: operators-backend-db
                  image: operators_backend_db:latest
                  imagePullPolicy: Never
