kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
    namespace: blog
    labels:
        app: operators-service
    name: operators-service
spec:
    ports:
        - name: operators-backend
          port: 80
          targetPort: 7000
    selector:
        app: operators-backend
    type: NodePort
